# Streaming-SDK

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettingsVS2019.json  CMakeSettingsVS2022.json  LICENSE.md  README.md
amf-helper-libs/amf-component-ffmpeg64/: CMakeLists.txt
amf-helper-libs/amf-public/: CMakeLists.txt
mbedtls-custom/: CMakeLists.txt
samples/RemoteDesktopServer/: AVStreamer.cpp  AVStreamer.h  CMakeLists.txt  RemoteDesktopServer.cpp  RemoteDesktopServer.h  RemoteDesktopServerLinux.cpp  RemoteDesktopServerLinux.h  RemoteDesktopServerWin.cpp  RemoteDesktopServerWin.h  main.cpp
samples/SimpleStreamingClient/: CMakeLists.txt  SimpleStreamingClient.cpp  SimpleStreamingClient.h  SimpleStreamingClientLinux.cpp  SimpleStreamingClientLinux.h  SimpleStreamingClientWin.cpp  SimpleStreamingClientWin.h  app.manifest  main.cpp
sdk/: CMakeLists.txt
sdk/audio/: AudioCodecs.cpp  AudioCodecs.h  AudioDispatcher.cpp  AudioDispatcher.h  AudioInput.cpp  AudioInput.h  AudioOutput.cpp  AudioOutput.h  AudioReceiverPipeline.cpp  AudioReceiverPipeline.h  AudioTransmitterAdapter.cpp  AudioTransmitterAdapter.h  CMakeLists.txt
sdk/audio/decoders/: AMFAudioDecoder.cpp  AMFAudioDecoder.h  AudioDecodeEngine.cpp  AudioDecodeEngine.h  AudioDecoderAAC.cpp  AudioDecoderAAC.h  AudioDecoderOPUS.cpp  AudioDecoderOPUS.h
sdk/audio/encoders/: AMFAudioEncoder.cpp  AMFAudioEncoder.h  AudioEncodeEngine.cpp  AudioEncodeEngine.h  AudioEncoderAAC.cpp  AudioEncoderAAC.h  AudioEncoderOPUS.cpp  AudioEncoderOPUS.h
sdk/controllers/: CMakeLists.txt  ControllerTypes.h  UserInput.cpp  UserInput.h
sdk/controllers/client/: ControllerBase.cpp  ControllerBase.h  ControllerManager.cpp  ControllerManager.h  GameController.h  KeyboardController.cpp  KeyboardController.h  MouseController.cpp  MouseController.h  MouseCursor.cpp  MouseCursor.h  TouchEvent.cpp  TouchEvent.h  TrackedHeadset.cpp  TrackedHeadset.h
sdk/controllers/client/lnx/: GameControllerLnx.cpp  GameControllerLnx.h  KeyboardControllerLnx.cpp  MouseControllerLnx.cpp  MouseCursorLnx.cpp  MouseCursorLnx.h  X11TouchController.cpp  X11TouchController.h
sdk/controllers/client/win/: GameControllerWin.cpp  GameControllerWin.h  KeyboardControllerWin.cpp  MouseControllerWin.cpp  MouseCursorWin.cpp  MouseCursorWin.h
sdk/controllers/server/: ControllerBaseSvr.h  ControllerManagerSvr.cpp  ControllerManagerSvr.h  GameControllerSvr.cpp  GameControllerSvr.h  KeyboardControllerSvr.cpp  KeyboardControllerSvr.h  MouseControllerSvr.cpp  MouseControllerSvr.h  TouchScreenControllerSvr.cpp  TouchScreenControllerSvr.h
sdk/controllers/server/lnx/: GameControllerLnxSvr.cpp  GameControllerLnxSvr.h  (+6 more)
sdk/controllers/tbls/: X11ToWindowsScanCodeTable.cpp
sdk/controllers/xdg/: AbortController.h  DBusConnection.cpp  DBusConnection.h  SDBusImportTable.cpp  SDBusImportTable.h  SDBusMessagePtr.cpp  SDBusMessagePtr.h  SDBusSlotPtr.cpp  SDBusSlotPtr.h  XDGDesktopPortal.cpp  XDGDesktopPortal.h  XDGRDPortalConnection.cpp  XDGRDPortalConnection.h
sdk/net/: CMakeLists.txt  Client.cpp  Client.h  ClientSession.cpp  ClientSession.h  DatagramClient.cpp  DatagramClient.h  DatagramClientSession.cpp  DatagramClientSession.h  DatagramServer.cpp  DatagramServer.h  DatagramServerSession.cpp  DatagramServerSession.h  DatagramSocket.cpp  DatagramSocket.h  Initializer.cpp  Initializer.h  Selector.cpp  Selector.h  Server.cpp  Server.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h  Socket.cpp  Socket.h  SocketAddress.cpp  StreamClient.cpp  StreamClient.h  StreamClientSession.cpp  StreamClientSession.h  StreamServer.cpp  StreamServer.h  StreamServerSession.cpp  StreamServerSession.h  StreamSocket.cpp  StreamSocket.h  UnixStreamSocket.cpp  UnixStreamSocket.h  (+4 more)
sdk/transports/transport-amd/: CMakeLists.txt  Channels.h  ClientImpl.cpp  ClientImpl.h  ClientSessionImpl.cpp  ClientSessionImpl.h  ClientTransportImpl.cpp  ClientTransportImpl.h  Codec.cpp  Codec.h  DgramClientSessionFlowCtrl.cpp  DgramClientSessionFlowCtrl.h  DgramFlowCtrlProtocol.cpp  DiscoverySessionImpl.cpp  DiscoverySessionImpl.h  FlowCtrlProtocol.h  Misc.cpp  Misc.h  ServerDiscovery.cpp  ServerDiscovery.h  ServerSessionImpl.cpp  ServerSessionImpl.h  ServerTransportImpl.cpp  ServerTransportImpl.h  StreamFlowCtrlProtocol.cpp  Subscriber.cpp  Subscriber.h  TCPServerImpl.cpp  TCPServerSessionImpl.cpp  TCPServerSessionImpl.h  TransportClient.h  TransportServer.h  TransportServerImpl.cpp  TransportServerImpl.h  TransportSession.h  UDPServerImpl.cpp  UDPServerSessionImpl.cpp  UDPServerSessionImpl.h
sdk/transports/transport-common/: Audio.cpp  Audio.h  CMakeLists.txt  ClientTransport.cpp  ClientTransport.h  CodecDescriptor.h  Controller.cpp  Controller.h  ServerTransport.h  Transport.h  Video.cpp  Video.h
sdk/util/: CMakeLists.txt
sdk/util/QoS/: QoS.cpp  QoS.h  ValueHistory.h
sdk/util/encryption/: AESPSKCipher.cpp  AESPSKCipher.h
sdk/util/pipeline/: AVDispatcher.cpp  AVDispatcher.h  AVPipeline.cpp  AVPipeline.h  AVSynchronizer.cpp  AVSynchronizer.h  AVTransmitterAdapter.cpp  AVTransmitterAdapter.h  AsynchronousSlot.cpp  AsynchronousSlot.h  PipelineSlot.cpp  PipelineSlot.h  SynchronousSlot.cpp  SynchronousSlot.h  TimestampCalibrator.cpp  TimestampCalibrator.h
sdk/util/stats/: ClientStatsManager.cpp  ClientStatsManager.h  ComponentStats.cpp  ComponentStats.h
sdk/video/: CMakeLists.txt  Defines.cpp  Defines.h  MonoscopicVideoInput.cpp  MonoscopicVideoInput.h  MonoscopicVideoOutput.cpp  MonoscopicVideoOutput.h  VideoDispatcher.cpp  VideoDispatcher.h  VideoReceiverPipeline.cpp  VideoReceiverPipeline.h  VideoTransmitterAdapter.cpp  VideoTransmitterAdapter.h
sdk/video/decoders/: UVDDecoder.cpp  UVDDecoder.h  UVDDecoderAV1.cpp  UVDDecoderAV1.h  UVDDecoderH264.cpp  UVDDecoderH264.h  UVDDecoderHEVC.cpp  UVDDecoderHEVC.h  VideoDecodeEngine.cpp  VideoDecodeEngine.h
sdk/video/encoders/: GPUEncoderAV1.cpp  GPUEncoderAV1.h  GPUEncoderH264.cpp  GPUEncoderH264.h  GPUEncoderHEVC.cpp  GPUEncoderHEVC.h  HDREncoder.cpp  HDREncoder.h  VideoEncodeEngine.cpp  VideoEncodeEngine.h
(+39 files in other folders)
